--- a/package.json
+++ b/package.json
@@ -12,20 +12,17 @@
   },
   "dependencies": {
     "@korolion/get-image-as-dataurl": "^0.2.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "marked": "^4.0.12"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-html": "^0.2.3",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
-    "concurrently": "^6.2.1",
-    "express-http-proxy": "^1.6.2",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-styles": "^3.14.1",
-    "rollup-plugin-terser": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -33,7 +30,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "rollup": "^2.56.3",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-styles": "^3.14.1",
+    "rollup-plugin-terser": "^7.0.2",
     "stylus": "^0.55.0",
     "typescript": "^4.4.2"
   }
