--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "rollup -c -w"
   },
   "dependencies": {
+    "@jitbit/htmlsanitizer": "^1.0.0",
     "@korolion/get-image-as-dataurl": "^0.2.0",
     "handlebars": "^4.7.7",
     "marked": "^4.0.12"
