--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@jitbit/htmlsanitizer": "^1.0.0",
     "@korolion/get-image-as-dataurl": "^0.2.0",
     "handlebars": "^4.7.7",
-    "marked": "^4.0.12"
+    "marked": "^4.0.12",
+    "qrcode-generator-es6": "^1.1.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
